[package]
name = "swap"
version = "0.1.0"
edition = "2021"
description = "System tray app to switch between Claude Code settings.json profiles"
license = "MIT"

[[bin]]
name = "swap"
path = "src/main.rs"

[dependencies]
gtk = "0.18"
glib = "0.18"
libappindicator = "0.9"
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "5"
libc = "0.2"

[profile.release]
strip = true
lto = true
opt-level = "z"
